--- a/torneio_2024.html
+++ b/torneio_2024.html
@@ -115,10 +115,10 @@
 
                         <div class="row gy-2 gx-4 mb-4">
                             <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i><b>15 e 16 de junho </b><br> - Futebol 11 (Sub 15) <br> - Futebol 5 (Sub8 e Sub9)</p>
+                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i><b>15 e 16 de junho </b><br> - Futebol 11 (Sub 15) <br> - Futebol 5 (Sub8) <br> - Futebol 5 (Sub9)</p>
                             </div>
                             <div class="col-sm-6">
-                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i>23 e 23 de junho </b><br> - Futebol 7 (Sub 10/11 e Sub12) </p>
+                                <p class="mb-0"><i class="fa fa-arrow-right text-primary me-2"></i><b>23 e 23 de junho </b><br> - Futebol 7 (Sub 10/11) <br> - Futebol 7 (Sub12) </p>
                             </div>
                             
                         </div> 
