--- a/formacao.html
+++ b/formacao.html
@@ -106,6 +106,26 @@
                 </div>
 				
 				<div class="row g-2 align-items-center">
+					<div class="col-lg-5">
+                        <div >
+                            <img src="img/formacao/captacoes_5.jpg" class="img-fluid w-100 h-100" alt="">
+                        </div>
+                    </div>
+					<div class="col-lg-5">
+                        <div >
+                            <img src="img/formacao/captacoes_6.jpg" class="img-fluid w-100 h-100" alt="">
+                        </div>
+                    </div>
+					<div class="col-lg-5">
+                        <div >
+                            <img src="img/formacao/captacoes_7.jpg" class="img-fluid w-100 h-100" alt="">
+                        </div>
+                    </div>
+					<div class="col-lg-5">
+                        <div >
+                            <img src="img/formacao/captacoes_8.jpg" class="img-fluid w-100 h-100" alt="">
+                        </div>
+                    </div>
                     <div class="col-lg-5">
                         <div >
                             <img src="img/formacao/captacoes_1.jpg" class="img-fluid w-100 h-100" alt="">
