--- a/404.html
+++ b/404.html
@@ -89,7 +89,7 @@
                     <div class="col-lg-6">
                         <i class="bi bi-exclamation-triangle display-1 text-primary"></i>
                         <h1 class="display-1">ERRO</h1>
-                        <h1 class="mb-4 text-dark">Página não contrada</h1>
+                        <h1 class="mb-4 text-dark">Página não encontrada</h1>
                         <p class="mb-4 text-dark">Algo correu mal, volte à página anterior!</p>
                         <a class="btn btn-primary rounded-pill py-3 px-5" href="index.html">Voltar página inicial</a>
                     </div>
