--- a/torneio_2024_2.html
+++ b/torneio_2024_2.html
@@ -108,6 +108,10 @@
     <img src="img/torneio/FCMaiaLidador.png" width="80" >
     <img src="img/torneio/inter_milheiros.jpg" width="80" >
 	<img src="img/torneio/UD-VALONGUENSE.png" width="80" >
+	<img src="img/torneio/barca.png" width="80" >
+	<img src="img/torneio/UDLagoas.png" width="60" >
+	<img src="img/torneio/cd_candal.png" width="60" >
+	<img src="img/torneio/macieira_maia.png" width="60" >
   </div>
 </div>
                 </div>
