--- a/torneio_2024.html
+++ b/torneio_2024.html
@@ -97,7 +97,7 @@
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                     <h5 class="section-title px-3">Torneio São Pedro CUP24</h5>
-                    <h1 class="mb-4">Inscrições abertas</h1>
+                    <h1 class="mb-4">Inscrições ENCERRADAS</h1>
                     
                 </div>
                 
