--- a/formacao.html
+++ b/formacao.html
@@ -99,6 +99,9 @@
                     <h1 class="mb-4">As nossas atividades, notícias e avisos</h1>
                     <p class="mb-0"><b>CAPTAÇÕES</b> - vem viver uma experiencia inesquecível <br> 2ª a 6ª das 19h00 às 20h30
                     </p>
+					<img src="img/FPF_certificacao.jpeg" class="img-fluid w-50 h-50" alt="">
+					<br>
+					<br>
 					<br>
 					<p class="mb-0"> <a href="docs/manual_acolhimento_v3.pdf"> <b> ## CONSULTE O NOSSO MANUAL DE ACOLHIMENTO ##</b></a>      </p>
 					
