--- a/index.html
+++ b/index.html
@@ -131,8 +131,8 @@
                                     <p class="mb-5 fs-5">Consulte tudo sobre o Torneio !!!!
                                     </p>
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="torneio_2024.html">Resultados    </a>
-										<a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="https://www.amazon.com/photos/shared/_r6UL5L7QjeBzNt2AzI8Vw.FXij4BVHdHcbHscu3HQSYY">FOTOS</a>
+                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="torneio_2024.html">Consulte os resultados e fotos    </a>
+										<!-- <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="https://www.amazon.com/photos/shared/_r6UL5L7QjeBzNt2AzI8Vw.FXij4BVHdHcbHscu3HQSYY">FOTOS</a> -->
                                     </div>
 									
                                         
