--- a/competicoes.html
+++ b/competicoes.html
@@ -100,12 +100,134 @@
 					<h1 class="mb-4">As nossas atividades e notícias</h1>
 					<p class="mb-0">   
                     </p> 
-					<h6 class="section-title px-1">Associação de Futebol do Porto (AFP)</h6>
+                </div>
+				<div class="mx-auto text-center mb-5" style="max-width: 900px;">
+
+					<p class="mb-0">   
+                    </p> 
+					<h6 class="section-title px-1">Associação de Futebol do Porto (AFP) 2024/25</h6>
+				<p class="mb-0">Na temporada 2024/2025 o A.D.R. S. Pedro Fins encontra-se a competir na AFP em 7 categorias:
+                    </p> 
+                </div>
+				<div class="row g-4">
+                    <div class="col-md-6 col-lg-3">
+                        <div class="guide-item">
+                            <div class="guide-img">
+                                <div class="guide-img-efects">
+                                    <img src="img/2024_25/logo.png" class="img-fluid w-100 rounded-top" alt="Image">
+                                </div>
+                                <div class="guide-icon rounded-pill p-2">
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25556&phase_group_id=82549&sport_type_id=1&view=standing"><i class="fab fa-camera"></i></a>
+                                </div>
+                            </div>
+                            <div class="guide-title text-center rounded-bottom p-4">
+                                <div class="guide-title-inner">
+                                    <h4 class="mt-3">Liga "Carlos Alberto"</h4>
+                                    <p class="mb-0">Sub-9 - Junio-F(Traquina)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+					<div class="col-md-6 col-lg-3">
+                        <div class="guide-item">
+                            <div class="guide-img">
+                                <div class="guide-img-efects">
+                                    <img src="img/2024_25/logo.png" class="img-fluid w-100 rounded-top" alt="Image">
+                                </div>
+                                <div class="guide-icon rounded-pill p-2">
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25554&phase_group_id=82510&sport_type_id=1"><i class="fab fa-camera"></i></a>
+                                </div>
+                            </div>
+                            <div class="guide-title text-center rounded-bottom p-4">
+                                <div class="guide-title-inner">
+                                    <h4 class="mt-3">C.D. Futebol 7</h4>
+                                    <p class="mb-0">Sub-10/11 - Junio-E(Benjamim)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6 col-lg-3">
+                        <div class="guide-item">
+                            <div class="guide-img">
+                                <div class="guide-img-efects">
+                                    <img src="img/2024_25/logo.png" class="img-fluid w-100 rounded-top" alt="Image">
+                                </div>
+                                <div class="guide-icon rounded-pill p-2">
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25384&phase_group_id=80634&sport_type_id=1&view=standing"><i class="fab fa-camera"></i></a>
+                                </div>
+                            </div>
+                            <div class="guide-title text-center rounded-bottom p-4">
+                                <div class="guide-title-inner">
+                                    <h4 class="mt-3">C.D. Futebol 11</h4>
+                                    <p class="mb-0">Sub-13 - Junior-D(Infantil)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+					<div class="col-md-6 col-lg-3">
+                        <div class="guide-item">
+                            <div class="guide-img">
+                                <div class="guide-img-efects">
+                                    <img src="img/2024_25/sub15.jpg" class="img-fluid w-100 rounded-top" alt="Image">
+                                </div>
+                                <div class="guide-icon rounded-pill p-2">
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25382&phase_group_id=80792&sport_type_id=1"><i class="fab fa-camera"></i></a>
+                                </div>
+                            </div>
+                            <div class="guide-title text-center rounded-bottom p-4">
+                                <div class="guide-title-inner">
+                                    <h4 class="mt-3">C.D. Futebol 11</h4>
+                                    <p class="mb-0">Sub-15 - Junior C (Iniciados)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+					<div class="col-md-6 col-lg-3">
+                        <div class="guide-item">
+                            <div class="guide-img">
+                                <div class="guide-img-efects">
+                                    <img src="img/2024_25/sub17.jpg" class="img-fluid w-100 rounded-top" alt="Image">
+                                </div>
+                                <div class="guide-icon rounded-pill p-2">
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25380&phase_group_id=80728&sport_type_id=1"><i class="fab fa-camera"></i></a>
+                                </div>
+                            </div>
+                            <div class="guide-title text-center rounded-bottom p-4">
+                                <div class="guide-title-inner">
+                                    <h4 class="mt-3">C.D. Futebol 11</h4>
+                                    <p class="mb-0">Sub-17 - Junior B (Juvenil)</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+					<div class="col-md-6 col-lg-3">
+                        <div class="guide-item">
+                            <div class="guide-img">
+                                <div class="guide-img-efects">
+                                    <img src="img/2024_25/logo.png" class="img-fluid w-100 rounded-top" alt="Image">
+                                </div>
+                                <div class="guide-icon rounded-pill p-2">
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25357&phase_group_id=80032&sport_type_id=1"><i class="fab fa-camera"></i></a>
+                                </div>
+                            </div>
+                            <div class="guide-title text-center rounded-bottom p-4">
+                                <div class="guide-title-inner">
+                                    <h4 class="mt-3">C.D. Futebol 11</h4>
+                                    <p class="mb-0">Sénior - I Divisão </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+				<div class="mx-auto text-center mb-5" style="max-width: 900px;">
+					<p class="mb-0">   
+                    </p> 
+					<br>
+					<h6 class="section-title px-1">Associação de Futebol do Porto (AFP) 2023/24</h6>
 				<p class="mb-0">Na temporada 2023/2024 o A.D.R. S. Pedro Fins encontra-se a competir na AFP em 7 categorias:
                     </p> 
                 </div>
                 <div class="row g-4">
-                    
                     <div class="col-md-6 col-lg-3">
                         <div class="guide-item">
                             <div class="guide-img">
@@ -214,7 +336,6 @@
                             </div>
                         </div>
                     </div>
-					
                 </div>
             </div>
         </div>
