--- a/competicoes.html
+++ b/competicoes.html
@@ -108,6 +108,13 @@
 					<h6 class="section-title px-1">Associação de Futebol do Porto (AFP) 2024/25</h6>
 				<p class="mb-0">Na temporada 2024/2025 o A.D.R. S. Pedro Fins encontra-se a competir na AFP em 7 categorias:
                     </p> 
+					<br> <p> Calendário dos Jogos: </p>
+					<a href="docs/2024_25/sub9_calendario.pdf" target="_blank"> SUB9, </a>
+					<a href="docs/2024_25/sub10_11_calendario.pdf" target="_blank"> SUB10/11, </a>
+					<a href="docs/2024_25/sub13_calendario.pdf" target="_blank"> SUB13, </a>
+					<a href="docs/2024_25/sub15_calendario.pdf" target="_blank"> SUB15, </a>
+					<a href="docs/2024_25/sub17_calendario.pdf" target="_blank"> SUB17, </a>
+					<a href="docs/2024_25/seniores_calendario.pdf" target="_blank"> Seniores </a>
                 </div>
 				<div class="row g-4">
                     <div class="col-md-6 col-lg-3">
