--- a/competicoes.html
+++ b/competicoes.html
@@ -124,12 +124,30 @@
                                     <img src="img/2024_25/logo.png" class="img-fluid w-100 rounded-top" alt="Image">
                                 </div>
                                 <div class="guide-icon rounded-pill p-2">
-                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25556&phase_group_id=82549&sport_type_id=1&view=standing"><i class="fab fa-camera"></i></a>
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="#"><i class="fab fa-camera"></i></a>
                                 </div>
                             </div>
                             <div class="guide-title text-center rounded-bottom p-4">
                                 <div class="guide-title-inner">
                                     <h4 class="mt-3">Liga "Carlos Alberto"</h4>
+                                    <p class="mb-0">Sub-8 </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+					<div class="col-md-6 col-lg-3">
+                        <div class="guide-item">
+                            <div class="guide-img">
+                                <div class="guide-img-efects">
+                                    <img src="img/2024_25/logo.png" class="img-fluid w-100 rounded-top" alt="Image">
+                                </div>
+                                <div class="guide-icon rounded-pill p-2">
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25556&phase_group_id=82549&sport_type_id=1&view=standing"><i class="fab fa-camera"></i></a>
+                                </div>
+                            </div>
+                            <div class="guide-title text-center rounded-bottom p-4">
+                                <div class="guide-title-inner">
+                                    <h4 class="mt-3">C.D. Futebol 7</h4>
                                     <p class="mb-0">Sub-9 - Junio-F(Traquina)</p>
                                 </div>
                             </div>
@@ -230,8 +248,11 @@
 					<p class="mb-0">   
                     </p> 
 					<br>
+					<br>
+					<br>
+					<br>
 					<h6 class="section-title px-1">Associação de Futebol do Porto (AFP) 2023/24</h6>
-				<p class="mb-0">Na temporada 2023/2024 o A.D.R. S. Pedro Fins encontra-se a competir na AFP em 7 categorias:
+				<p class="mb-0">Na temporada 2023/2024 o A.D.R. S. Pedro Fins encontra-se a competir na AFP em 6 categorias:
                     </p> 
                 </div>
                 <div class="row g-4">
