--- a/competicoes.html
+++ b/competicoes.html
@@ -127,13 +127,13 @@
                                     <img src="img/2024_25/logo.png" class="img-fluid w-100 rounded-top" alt="Image">
                                 </div>
                                 <div class="guide-icon rounded-pill p-2">
-                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="#"><i class="fab fa-camera"></i></a>
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="#"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                             <div class="guide-title text-center rounded-bottom p-4">
                                 <div class="guide-title-inner">
-                                    <h4 class="mt-3">Liga "Carlos Alberto"</h4>
-                                    <p class="mb-0">Sub-8 </p>
+                                    <h4 class="mt-3">Sub - 8</h4>
+                                    <p class="mb-0">Liga "Carlos Alberto"</p>
                                 </div>
                             </div>
                         </div>
@@ -145,13 +145,13 @@
                                     <img src="img/2024_25/logo.png" class="img-fluid w-100 rounded-top" alt="Image">
                                 </div>
                                 <div class="guide-icon rounded-pill p-2">
-                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25556&phase_group_id=82549&sport_type_id=1&view=standing"><i class="fab fa-camera"></i></a>
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25556&phase_group_id=82549&sport_type_id=1&view=standing"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                             <div class="guide-title text-center rounded-bottom p-4">
                                 <div class="guide-title-inner">
-                                    <h4 class="mt-3">C.D. Futebol 7</h4>
-                                    <p class="mb-0">Sub-9 - Junio-F(Traquina)</p>
+                                    <h4 class="mt-3">Sub - 9</h4>
+                                    <p class="mb-0">C.D. Futebol 7 - Junio-F(Traquina)</p>
                                 </div>
                             </div>
                         </div>
@@ -163,13 +163,13 @@
                                     <img src="img/2024_25/logo.png" class="img-fluid w-100 rounded-top" alt="Image">
                                 </div>
                                 <div class="guide-icon rounded-pill p-2">
-                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25554&phase_group_id=82510&sport_type_id=1"><i class="fab fa-camera"></i></a>
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25554&phase_group_id=82510&sport_type_id=1"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                             <div class="guide-title text-center rounded-bottom p-4">
                                 <div class="guide-title-inner">
-                                    <h4 class="mt-3">C.D. Futebol 7</h4>
-                                    <p class="mb-0">Sub-10/11 - Junio-E(Benjamim)</p>
+                                    <h4 class="mt-3">Sub - 10/11</h4>
+                                    <p class="mb-0">C.D. Futebol 7 - Junio-E(Benjamim)</p>
                                 </div>
                             </div>
                         </div>
@@ -181,13 +181,13 @@
                                     <img src="img/2024_25/logo.png" class="img-fluid w-100 rounded-top" alt="Image">
                                 </div>
                                 <div class="guide-icon rounded-pill p-2">
-                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25384&phase_group_id=80634&sport_type_id=1&view=standing"><i class="fab fa-camera"></i></a>
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25384&phase_group_id=80634&sport_type_id=1&view=standing"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                             <div class="guide-title text-center rounded-bottom p-4">
                                 <div class="guide-title-inner">
-                                    <h4 class="mt-3">C.D. Futebol 11</h4>
-                                    <p class="mb-0">Sub-13 - Junior-D(Infantil)</p>
+                                    <h4 class="mt-3">Sub - 13</h4>
+                                    <p class="mb-0">C.D. Futebol 11 - Junior-D(Infantil)</p>
                                 </div>
                             </div>
                         </div>
@@ -199,13 +199,13 @@
                                     <img src="img/2024_25/sub15.jpg" class="img-fluid w-100 rounded-top" alt="Image">
                                 </div>
                                 <div class="guide-icon rounded-pill p-2">
-                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25382&phase_group_id=80792&sport_type_id=1"><i class="fab fa-camera"></i></a>
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25382&phase_group_id=80792&sport_type_id=1"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                             <div class="guide-title text-center rounded-bottom p-4">
                                 <div class="guide-title-inner">
-                                    <h4 class="mt-3">C.D. Futebol 11</h4>
-                                    <p class="mb-0">Sub-15 - Junior C (Iniciados)</p>
+                                    <h4 class="mt-3">Sub - 15</h4>
+                                    <p class="mb-0">C.D. Futebol 11 - Junior C (Iniciados)</p>
                                 </div>
                             </div>
                         </div>
@@ -217,13 +217,13 @@
                                     <img src="img/2024_25/sub17.jpg" class="img-fluid w-100 rounded-top" alt="Image">
                                 </div>
                                 <div class="guide-icon rounded-pill p-2">
-                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25380&phase_group_id=80728&sport_type_id=1"><i class="fab fa-camera"></i></a>
+                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25380&phase_group_id=80728&sport_type_id=1"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                             <div class="guide-title text-center rounded-bottom p-4">
                                 <div class="guide-title-inner">
-                                    <h4 class="mt-3">C.D. Futebol 11</h4>
-                                    <p class="mb-0">Sub-17 - Junior B (Juvenil)</p>
+                                    <h4 class="mt-3">Sub - 17</h4>
+                                    <p class="mb-0">C.D. Futebol 11 - Junior B (Juvenil)</p>
                                 </div>
                             </div>
                         </div>
@@ -235,13 +235,13 @@
                                     <img src="img/2024_25/logo.png" class="img-fluid w-100 rounded-top" alt="Image">
                                 </div>
                                 <div class="guide-icon rounded-pill p-2">
-                                    <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25357&phase_group_id=80032&sport_type_id=1"><i class="fab fa-camera"></i></a>
+                                    <a class="btn btn-square btn-primary rounded-circle mx-2" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25357&phase_group_id=80032&sport_type_id=1"><i class="fa fa-link"></i></a>
                                 </div>
                             </div>
                             <div class="guide-title text-center rounded-bottom p-4">
                                 <div class="guide-title-inner">
-                                    <h4 class="mt-3">C.D. Futebol 11</h4>
-                                    <p class="mb-0">Sénior - I Divisão </p>
+                                    <h4 class="mt-3">Séniores</h4>
+                                    <p class="mb-0">C.D. Futebol 11 - I Divisão </p>
                                 </div>
                             </div>
                         </div>
