--- a/index.html
+++ b/index.html
@@ -209,6 +209,93 @@
                         </div> 
                     </div>
                 </div>
+
+                <div class="m-4">
+                    <div class="accordion" id="JAZAccordion">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingOne">
+                                <button type="button" class="accordion-button collapsed bg-primary text-white" data-bs-toggle="collapse" data-bs-target="#collapseItemOne">Missão</button>                                 
+                            </h2>
+                            <div id="collapseItemOne" class="accordion-collapse collapse show" data-bs-parent="#JAZAccordion">
+                                <div class="card-body">
+                                    <p>A Associação Desportiva e Recreativa de São Pedro Fins tem como missão promover a prática
+                                        desportiva de crianças a adultos, fornecendo-lhes as melhores condições para a sua evolução como
+                                        atletas e como seres humanos, independentemente do género, da idade e da origem.
+                                        O clube promove a atuação de todos os seus elementos de forma socialmente responsável,
+                                        cumprindo de forma exemplar com os seus compromissos, apelando sempre ao Fair play e
+                                        refutando qualquer comportamento de discriminação ou Bullying.
+                                        Procuramos que todos os envolvidos – Staff, Sócios, Adeptos, Atletas, Encarregados de Educação,
+                                        Patrocinadores e a nossa Comunidade – se sinta orgulhosa pela prática de desporto,
+                                        comportamento e resultados, apresentados pelo nosso nobre clube.
+                                        </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingTwo">
+                                <button type="button" class="accordion-button bg-success text-white" data-bs-toggle="collapse" data-bs-target="#collapseItemTwo">Objetivo</button>
+                            </h2>
+                            <div id="collapseItemTwo" class="accordion-collapse collapse" data-bs-parent="#JAZAccordion">
+                                <div class="card-body">
+                                <p>Vivemos numa sociedade ativa, onde a qualidade de vida se interliga entre o nosso trabalho, vida
+                                    pessoal, vida social, entre outras.
+                                    Pretendemos criar destaque face aos outros clubes, com o objetivo de evoluir nos resultados dos
+                                    diversos escalões, promover formação de maneira a encontrar um equilíbrio entre o clube, o atleta,
+                                    a formação educacional e as suas demais interações, com a ambição de formar cidadãos mais
+                                    capazes.
+                                    Assim é por nosso objetivo e pretensão crescer em todas as vertentes do clube e iniciar mais
+                                    projetos ligados à formação e à educação, bem como criar um ponto de ligação com as restantes
+                                    atividades formativas dos atletas.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingThree">
+                                <button type="button" class="accordion-button collapsed bg-primary text-white" data-bs-toggle="collapse" data-bs-target="#collapseItemThree">Visão</button>                     
+                            </h2>
+                            <div id="collapseItemThree" class="accordion-collapse collapse" data-bs-parent="#JAZAccordion">
+                                <div class="card-body">
+                                <p>A nossa visão consiste em marcar a diferença não só pela qualidade desportiva, mas também pela
+                                    qualidade de vida de todos os envolvidos no projeto A.D.R. São Pedro Fins.
+                                    Primamos pela excelência nas performances desportivas e respeito pelo fair-play, de forma a
+                                    convidar mais parceiros, adeptos, atletas e a comunidade no dia a dia deste projeto.
+                                    Promovemos o clube, formando atletas e seres humanos, com valores e princípios, apelando a uma
+                                    convivência em cidadania sã e ativa.
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="accordion-item">
+                                <h2 class="accordion-header" id="headingOne">
+                                    <button type="button" class="accordion-button collapsed bg-success text-white" data-bs-toggle="collapse" data-bs-target="#collapseItem4">Valores</button>                     
+                                </h2>
+                                <div id="collapseItem4" class="accordion-collapse collapse" data-bs-parent="#JAZAccordion">
+                                    <div class="card-body">
+                                    <p>Os valores que exprimem a Visão e a Missão da Associação Desportiva e Recreativa de S. Pedro
+                                        Fins e que criam as melhores condições à realização dos nossos objetivos são:
+                                        ✓ Paixão;
+                                        ✓ Dedicação;
+                                        ✓ Disciplina;
+                                        ✓ Fair Play;
+                                        ✓ Esforço;
+                                        ✓ Respeito;
+                                        ✓ Solidariedade;
+                                        ✓ Profissionalismo;
+                                        ✓ Espírito de Equipa;
+                                        ✓ Evolução;
+                                        ✓ Aprendizagem;
+                                        ✓ Progressão;
+                                        ✓ Amizade;
+                                        ✓ Entreajuda;
+                                        ✓ Humildade.
+                                        
+                                        </p>
+                                    </div>
+                                </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
         <!-- About End -->
