--- a/competicoes.html
+++ b/competicoes.html
@@ -178,7 +178,7 @@
                         <div class="guide-item">
                             <div class="guide-img">
                                 <div class="guide-img-efects">
-                                    <img src="img/2024_25/logo.png" class="img-fluid w-100 rounded-top" alt="Image">
+                                    <img src="img/2024_25/sub13.jpg" class="img-fluid w-100 rounded-top" alt="Image">
                                 </div>
                                 <div class="guide-icon rounded-pill p-2">
                                     <a class="btn btn-square btn-primary rounded-circle mx-1" href="https://afporto.pt/competicoes-afporto/futebol/detalhe-da-competicao/?competition_id=25384&phase_group_id=80634&sport_type_id=1&view=standing"><i class="fa fa-link"></i></a>
