--- a/torneio_2025.html
+++ b/torneio_2025.html
@@ -98,7 +98,7 @@
             <div class="container py-5">
                 <div class="mx-auto text-center mb-5" style="max-width: 900px;">
                     <h5 class="section-title px-3">Torneio São Pedro CUP25</h5>
-                    <h1 class="mb-4">EQUIPES PARTICIPANTES</h1>
+                    <h1 class="mb-4">EQUIPAS PARTICIPANTES</h1>
                     <div class="row">
 					  <div class="column">
 						<img src="img/torneio/ADRSPedroFins.png" width="50" >
