--- a/formacao.html
+++ b/formacao.html
@@ -116,6 +116,7 @@
                     </p>
 					<img src="img/FPF_certificacao.jpeg" class="img-fluid w-50 h-50" alt="">
 					<br>
+                    <img src="img/SELO DIGITAL INICIATIVA Bandeira da Etica_.png" class="img-fluid w-50 h-50" alt="">
 					<br>
 					<br>
 					<!-- <p class="mb-0"> <a href="docs/manual_acolhimento_v3.pdf"> <b> ## CONSULTE O NOSSO MANUAL DE ACOLHIMENTO ##</b></a>      </p> -->
