--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         <li data-bs-target="#carouselId" data-bs-slide-to="2"></li>
                     </ol>
                     <div class="carousel-inner" role="listbox">
-                        <div class="carousel-item  active">
+                        <div class="carousel-item">
 							<!-- <img src="img/carousel/01_logo.png" class="img-fluid" alt="Image"> -->
 							<img src="img/carousel/04_MG_3432.png" class="img-fluid" alt="Image">
                             <div class="carousel-caption">
@@ -121,17 +121,17 @@
                                 </div>
                             </div>
                         </div>
-						<div class="carousel-item">
+						<div class="carousel-item  active">
                             <!-- <img src="img/carousel-3.jpg" class="img-fluid" alt="Image"> -->
 							<img src="img/carousel/03_torneio.jpg" class="img-fluid" alt="Image">
                             <div class="carousel-caption">
                                 <div class="p-3" style="max-width: 900px;">
                                     <h4 class="text-white text-uppercase fw-bold mb-4" style="letter-spacing: 3px;">ADR São PEDRO FINS</h4>
-                                    <h1 class="display-2 text-capitalize text-white mb-4">Torneio 2024</h1>
+                                    <h1 class="display-2 text-capitalize text-white mb-4">Torneio 2025</h1>
                                     <p class="mb-5 fs-5">Consulte tudo sobre o Torneio !!!!
                                     </p>
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="torneio_2024.html">Consulte os resultados e fotos    </a>
+                                        <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="torneio_2025.html">Mais informação sobre o torneio    </a>
 										<!-- <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="https://www.amazon.com/photos/shared/_r6UL5L7QjeBzNt2AzI8Vw.FXij4BVHdHcbHscu3HQSYY">FOTOS</a> -->
                                     </div>
 									
