--- a/torneio_2025.html
+++ b/torneio_2025.html
@@ -144,21 +144,23 @@
                       </div>
 					  <div class="column">
                         <h4>21 e 22 de Junho</h4>
-                        &nbsp;&nbsp;&nbsp;&nbsp; Futebol 11 - SUB 13 e Futebol 11 - SUB 15 <br> <br>
+                        &nbsp;&nbsp;&nbsp;&nbsp; Futebol 11 - SUB 13 e SUB 15 <br> <br>
 					  </div>
                       <div class="column">
                         <h4>5 e 6 de Julho</h4>
-                        &nbsp;&nbsp;&nbsp;&nbsp; Futebol 7 - SUB 9 e Futebol 7 - SUB 10/11  <br> <br>
+                        &nbsp;&nbsp;&nbsp;&nbsp; Futebol 7 - SUB 9 e SUB 10/11  <br> <br>
 					</div>
                 </div>                
-                
-
-
-
-
                               
 				<br>
                 <h5>Mais informações - 935 848 683</h5>
+
+
+
+                <div class="d-flex align-items-center justify-content-center">
+                    <a class="btn-hover-bg btn btn-primary rounded-pill text-white py-3 px-5" href="torneio_2024.html">Torneio 2024 - galeria de fotos e classificações </a>
+					<br> <br> <br> <br> 
+                </div>
 
             </div>
 			
