--- a/torneio_2025.html
+++ b/torneio_2025.html
@@ -155,6 +155,10 @@
 				<br>
                 <h5>Mais informações - 935 848 683</h5>
 
+                				<div class="d-flex align-items-center justify-content-center">
+				    <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vQMUdxTbRdkB0EG3pswunnbRzVZ-UzLAwOUA_xKMnzkVY4OyYvYYAs31K53GQM1-UFS3_41bR2PPiHm/pubhtml#" width="1250" height="950"></iframe>
+				</div>
+
 
 
                 <div class="d-flex align-items-center justify-content-center">
