--- a/torneio_2025.html
+++ b/torneio_2025.html
@@ -131,6 +131,7 @@
                         <img src="img/torneio/GD-AGUAS-SANTAS.png" width="65" >
                         <img src="img/torneio/F.C.S.Romao.png" width="65" >
                         <img src="img/torneio/CR-ATAENSE.png" width="70" >
+                        <img src="img/torneio/CDFeirense.png" width="70" >
 					  </div>
 					</div>
                 </div>
